# MacOpenGL

./: .gitignore  DrawingData.h  GLFWClass.cpp  NodeMap.cpp  TrisSquares.cpp  app  main.cpp  meson.build
Libraries/include/: deps.h
app.dSYM/Contents/Resources/DWARF/: app
include/: Context.hpp  Entity.hpp  Game.hpp  ResourceManager.hpp  Sprite.hpp  Texture.hpp  Textures.hpp  Window.hpp  gl.hpp  meson.build  shader.hpp
shaders/sprite/: sprite.frag  sprite.vs
source/: Entity.cpp  Game.cpp  ResourceManager.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp  shader.cpp
